--- a/app/src/main/res/layout/times_up.xml
+++ b/app/src/main/res/layout/times_up.xml
@@ -38,6 +38,7 @@
             android:text="Times Up!"
             android:textColor="#333333"
             android:textSize="20sp"
+            android:fontFamily="@font/poppins_medium"
             android:textStyle="bold" />
 
         <TextView
@@ -47,7 +48,8 @@
             android:layout_marginTop="8dp"
             android:text="You are running out of time.  You can’t modify any questions. You must submit the exam now or system will automatically submit your answers in 10 seconds and show your score."
             android:textColor="#333333"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:fontFamily="@font/poppins_regular"/>
 
         <FrameLayout
             android:id="@+id/submitContainer"
