--- a/app/src/main/res/layout/card_test.xml
+++ b/app/src/main/res/layout/card_test.xml
@@ -65,6 +65,7 @@
                         android:text="React JS"
                         android:textColor="#000000"
                         android:textSize="22sp"
+                        android:fontFamily="@font/poppins_medium"
                         android:textStyle="bold" />
 
                     <ImageView
@@ -90,14 +91,16 @@
                         android:layout_height="wrap_content"
                         android:text="8/10"
                         android:textColor="#8B5CF6"
-                        android:textSize="13sp" />
+                        android:textSize="13sp"
+                        android:fontFamily="@font/poppins_regular"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=" question"
                         android:textColor="#b0b0b2"
-                        android:textSize="13sp" />
+                        android:textSize="13sp"
+                        android:fontFamily="@font/poppins_regular"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -112,14 +115,16 @@
                         android:layout_height="wrap_content"
                         android:text="35min"
                         android:textColor="#8B5CF6"
-                        android:textSize="13sp" />
+                        android:textSize="13sp"
+                        android:fontFamily="@font/poppins_regular"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=" remaining"
                         android:textColor="#b0b0b2"
-                        android:textSize="13sp" />
+                        android:textSize="13sp"
+                        android:fontFamily="@font/poppins_regular"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
@@ -131,7 +136,7 @@
             android:layout_height="6dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginTop="-9dp"
+            android:layout_marginTop="-20dp"
             android:max="100"
             android:progress="0"
             android:progressDrawable="@drawable/progress_gradient"
