--- a/app/src/main/res/layout/filling_test.xml
+++ b/app/src/main/res/layout/filling_test.xml
@@ -36,7 +36,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:textColor="#000000"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:fontFamily="@font/poppins_regular"/>
 
         <RadioGroup
             android:id="@+id/answersContainer"
@@ -54,7 +55,8 @@
                 android:padding="16dp"
                 android:textAllCaps="false"
                 android:textColor="@xml/selector_answer_text"
-                android:layout_marginBottom="12dp" />
+                android:layout_marginBottom="12dp"
+                android:fontFamily="@font/poppins_regular"/>
 
             <RadioButton
                 android:id="@+id/answerB"
@@ -65,7 +67,8 @@
                 android:padding="16dp"
                 android:textAllCaps="false"
                 android:textColor="@xml/selector_answer_text"
-                android:layout_marginBottom="12dp" />
+                android:layout_marginBottom="12dp"
+                android:fontFamily="@font/poppins_regular"/>
 
             <RadioButton
                 android:id="@+id/answerC"
@@ -76,7 +79,8 @@
                 android:padding="16dp"
                 android:textAllCaps="false"
                 android:textColor="@xml/selector_answer_text"
-                android:layout_marginBottom="12dp" />
+                android:layout_marginBottom="12dp"
+                android:fontFamily="@font/poppins_regular"/>
 
             <RadioButton
                 android:id="@+id/answerD"
@@ -87,7 +91,8 @@
                 android:padding="16dp"
                 android:textAllCaps="false"
                 android:textColor="@xml/selector_answer_text"
-                android:layout_marginBottom="12dp" />
+                android:layout_marginBottom="12dp"
+                android:fontFamily="@font/poppins_regular"/>
 
         </RadioGroup>
         <LinearLayout
