--- a/app/src/main/res/layout/info_test.xml
+++ b/app/src/main/res/layout/info_test.xml
@@ -39,6 +39,7 @@
             android:layout_marginEnd="16dp"
             android:textColor="#000"
             android:textSize="18sp"
+            android:fontFamily="@font/poppins_medium"
             android:textStyle="bold" />
 
         <ImageView
@@ -53,7 +54,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
-        android:clipToPadding="false"
+        android:clipToPadding="true"
+        android:paddingTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/topBarLayout"
         app:layout_constraintBottom_toTopOf="@id/startTestContainer"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:paddingStart="30dp"
                 android:paddingEnd="30dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:adjustViewBounds="true"
                 android:scaleType="fitStart"
                 android:src="@drawable/photo_video" />
@@ -94,6 +96,7 @@
                     android:layout_weight="0.8"
                     android:text="AWS Certification"
                     android:textSize="20sp"
+                    android:fontFamily="@font/poppins_semibold"
                     android:textColor="#000" />
 
                 <LinearLayout
@@ -147,6 +150,7 @@
                             android:layout_height="wrap_content"
                             android:text="0 Questions"
                             android:textSize="16sp"
+                            android:fontFamily="@font/poppins_medium"
                             android:textColor="#000" />
 
                         <TextView
@@ -154,6 +158,7 @@
                             android:layout_height="wrap_content"
                             android:text="10 points for a correct answer"
                             android:textSize="16sp"
+                            android:fontFamily="@font/poppins_regular"
                             android:textColor="#999999" />
                     </LinearLayout>
                 </LinearLayout>
@@ -180,6 +185,7 @@
                             android:layout_height="wrap_content"
                             android:text="0h 0min"
                             android:textSize="16sp"
+                            android:fontFamily="@font/poppins_medium"
                             android:textColor="#000" />
 
                         <TextView
@@ -187,6 +193,7 @@
                             android:layout_height="wrap_content"
                             android:text="Total duration of the quiz"
                             android:textSize="16sp"
+                            android:fontFamily="@font/poppins_regular"
                             android:textColor="#999999" />
                     </LinearLayout>
                 </LinearLayout>
@@ -212,6 +219,7 @@
                             android:layout_height="wrap_content"
                             android:text="Win 10 stars"
                             android:textSize="16sp"
+                            android:fontFamily="@font/poppins_medium"
                             android:textColor="#000" />
 
                         <TextView
@@ -219,6 +227,7 @@
                             android:layout_height="wrap_content"
                             android:text="Answer all questions correctly"
                             android:textSize="16sp"
+                            android:fontFamily="@font/poppins_regular"
                             android:textColor="#999999" />
                     </LinearLayout>
                 </LinearLayout>
@@ -242,6 +251,7 @@
                 android:paddingEnd="30dp"
                 android:textColor="#000"
                 android:textSize="14sp"
+                android:fontFamily="@font/poppins_regular"
                 android:lineSpacingExtra="4dp" />
         </LinearLayout>
     </ScrollView>
@@ -274,6 +284,7 @@
             android:text="Start test"
             android:textColor="#FFF"
             android:textSize="16sp"
+            android:fontFamily="@font/poppins_medium"
             android:textStyle="bold"
             android:paddingTop="14dp"
             android:paddingBottom="14dp" />
