--- a/app/src/main/res/layout/item_test_card.xml
+++ b/app/src/main/res/layout/item_test_card.xml
@@ -62,6 +62,7 @@
                     android:maxLines="1"
                     android:textColor="#000000"
                     android:textSize="14sp"
+                    android:fontFamily="@font/poppins_medium"
                     android:textStyle="bold" />
 
                 <TextView
@@ -72,7 +73,8 @@
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:textColor="#888888"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:fontFamily="@font/poppins_regular"/>
             </LinearLayout>
             <ImageView
                 android:layout_width="24dp"
