--- a/app/src/main/res/layout/card_test.xml
+++ b/app/src/main/res/layout/card_test.xml
@@ -81,9 +81,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
                     android:gravity="center_vertical"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginTop="-2dp">
 
                     <TextView
                         android:id="@+id/cardProgress"
@@ -136,7 +136,7 @@
             android:layout_height="6dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginTop="-20dp"
+            android:layout_marginTop="-17dp"
             android:max="100"
             android:progress="0"
             android:progressDrawable="@drawable/progress_gradient"
