--- a/app/src/main/res/layout/item_test.xml
+++ b/app/src/main/res/layout/item_test.xml
@@ -74,7 +74,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
@@ -84,14 +83,15 @@
                         android:layout_height="wrap_content"
                         android:text="8/10"
                         android:textColor="#8B5CF6"
-                        android:textSize="13sp"
+                        android:textSize="12sp"
                         android:fontFamily="@font/poppins_regular"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="4dp">
 
                     <TextView
                         android:id="@+id/remainingTime"
@@ -99,7 +99,7 @@
                         android:layout_height="wrap_content"
                         android:text="35min"
                         android:textColor="#8B5CF6"
-                        android:textSize="13sp"
+                        android:textSize="12sp"
                         android:fontFamily="@font/poppins_regular"/>
                 </LinearLayout>
                 <FrameLayout
