--- a/app/src/main/res/layout/filling_test.xml
+++ b/app/src/main/res/layout/filling_test.xml
@@ -19,25 +19,23 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-    <!--
+
 <ScrollView
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:clipToPadding="false"
     android:fillViewport="true"
+    android:scrollbars="none"
+    android:layout_marginBottom="100dp"
     app:layout_constraintTop_toBottomOf="@id/testProgressBar"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent">
-    -->
     <LinearLayout
         android:id="@+id/contentContainer"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/testProgressBar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:layout_marginTop="16dp">
 
         <TextView
             android:id="@+id/question"
@@ -132,4 +130,5 @@
                 android:textColor="#000000"/>
         </LinearLayout>
     </LinearLayout>
+</ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
