--- a/app/src/main/res/layout/info_test.xml
+++ b/app/src/main/res/layout/info_test.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,16 +11,16 @@
         android:id="@+id/topBarLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:elevation="8dp"
         android:gravity="center_vertical"
+        android:orientation="horizontal"
         android:paddingStart="30dp"
-        android:paddingEnd="30dp"
         android:paddingTop="30dp"
+        android:paddingEnd="30dp"
         android:paddingBottom="5dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/backIcon"
@@ -33,13 +32,13 @@
             android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/poppins_medium"
+            android:gravity="center"
             android:textColor="#000"
             android:textSize="18sp"
-            android:fontFamily="@font/poppins_medium"
             android:textStyle="bold" />
 
         <ImageView
@@ -53,13 +52,13 @@
         android:id="@+id/contentScroll"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:fillViewport="true"
         android:clipToPadding="true"
+        android:fillViewport="true"
         android:paddingTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/topBarLayout"
         app:layout_constraintBottom_toTopOf="@id/startTestContainer"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/topBarLayout">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -70,55 +69,68 @@
                 android:id="@+id/imageHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingStart="30dp"
-                android:paddingEnd="30dp"
                 android:layout_marginTop="10dp"
                 android:adjustViewBounds="true"
+                android:paddingStart="30dp"
+                android:paddingEnd="30dp"
                 android:scaleType="fitStart"
                 android:src="@drawable/photo_video" />
 
             <LinearLayout
-                android:id="@+id/timerContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
+                android:orientation="vertical"
                 android:paddingStart="30dp"
                 android:paddingEnd="30dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:weightSum="1">
+                android:layout_marginBottom="16dp">
 
-                <TextView
-                    android:id="@+id/title1"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.8"
-                    android:text="AWS Certification"
-                    android:textSize="20sp"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:textColor="#000" />
-
+                <!-- Строка с заголовком и рейтингом -->
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.2"
                     android:orientation="horizontal"
-                    android:gravity="end|center_vertical">
-
-                    <ImageView
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:src="@drawable/ic_star" />
+                    android:gravity="center_vertical">
 
                     <TextView
+                        android:id="@+id/title1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:text="AWS Certification"
+                        android:textColor="#000"
+                        android:textSize="20sp" />
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="6dp"
-                        android:text="4.7"
-                        android:textColor="#000"
-                        android:textSize="14sp" />
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="16dp"
+                            android:layout_height="16dp"
+                            android:src="@drawable/ic_star" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="6dp"
+                            android:text="4.7"
+                            android:textColor="#000"
+                            android:textSize="14sp" />
+                    </LinearLayout>
                 </LinearLayout>
+                <TextView
+                    android:id="@+id/description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textColor="#999999"
+                    android:textSize="16sp"
+                    android:text="" />
             </LinearLayout>
 
             <LinearLayout
@@ -130,8 +142,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginBottom="20dp">
+                    android:layout_marginBottom="20dp"
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -148,25 +160,26 @@
                             android:id="@+id/questionsCount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="0 Questions"
-                            android:textSize="16sp"
                             android:fontFamily="@font/poppins_medium"
-                            android:textColor="#000" />
+                            android:text="0 Questions"
+                            android:textColor="#000"
+                            android:textSize="16sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="10 points for a correct answer"
-                            android:textSize="16sp"
                             android:fontFamily="@font/poppins_regular"
-                            android:textColor="#999999" />
+                            android:text="10 points for a correct answer"
+                            android:textColor="#999999"
+                            android:textSize="16sp" />
                     </LinearLayout>
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginBottom="20dp">
+                    android:layout_marginBottom="20dp"
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -183,25 +196,26 @@
                             android:id="@+id/testDuration"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="0h 0min"
-                            android:textSize="16sp"
                             android:fontFamily="@font/poppins_medium"
-                            android:textColor="#000" />
+                            android:text="0h 0min"
+                            android:textColor="#000"
+                            android:textSize="16sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Total duration of the quiz"
-                            android:textSize="16sp"
                             android:fontFamily="@font/poppins_regular"
-                            android:textColor="#999999" />
+                            android:text="Total duration of the quiz"
+                            android:textColor="#999999"
+                            android:textSize="16sp" />
                     </LinearLayout>
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginBottom="20dp">
+                    android:layout_marginBottom="20dp"
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -217,44 +231,47 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Win 10 stars"
-                            android:textSize="16sp"
                             android:fontFamily="@font/poppins_medium"
-                            android:textColor="#000" />
+                            android:text="Win 10 stars"
+                            android:textColor="#000"
+                            android:textSize="16sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Answer all questions correctly"
-                            android:textSize="16sp"
                             android:fontFamily="@font/poppins_regular"
-                            android:textColor="#999999" />
+                            android:text="Answer all questions correctly"
+                            android:textColor="#999999"
+                            android:textSize="16sp" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Please read the text below carefully so you can understand it"
-                android:textSize="16dp"
                 android:layout_marginTop="16dp"
+                android:lineSpacingExtra="5dp"
                 android:paddingStart="30dp"
                 android:paddingEnd="30dp"
-                android:lineSpacingExtra="5dp" />
+                android:text="Please read the text below carefully so you can understand it"
+                android:textSize="16dp" />
+
             <TextView
                 android:id="@+id/instructionText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:elevation="8dp"
                 android:layout_margin="24dp"
+                android:elevation="8dp"
+                android:fontFamily="@font/poppins_regular"
+                android:lineSpacingExtra="4dp"
                 android:paddingStart="30dp"
                 android:paddingEnd="30dp"
                 android:textColor="#000"
-                android:textSize="14sp"
-                android:fontFamily="@font/poppins_regular"
-                android:lineSpacingExtra="4dp" />
+                android:textSize="14sp" />
         </LinearLayout>
     </ScrollView>
+
     <FrameLayout
         android:id="@+id/startTestContainer"
         android:layout_width="0dp"
@@ -264,8 +281,8 @@
         android:layout_marginBottom="70dp"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
             android:layout_width="match_parent"
@@ -280,13 +297,13 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_medium"
             android:gravity="center"
+            android:paddingTop="14dp"
+            android:paddingBottom="14dp"
             android:text="Start test"
             android:textColor="#FFF"
             android:textSize="16sp"
-            android:fontFamily="@font/poppins_medium"
-            android:textStyle="bold"
-            android:paddingTop="14dp"
-            android:paddingBottom="14dp" />
+            android:textStyle="bold" />
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
